--- a/layer/admin/package.json
+++ b/layer/admin/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "jquery": "^1.12.4",
+    "jquery": ">=3.5.0",
     "jquery-ui": "^1.12.1",
     "json5-loader": "^4.0.1",
     "popper.js": "^1.16.1",
